--- a/ansible/inventory/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:R+AURfPC,iv:8SWiXOiT1Vb63FyC+4zroB3MUqbuuXfZ+7AWW3nW3Y8=,tag:+srvaH7r4kOOPlnvp3Kj5A==,type:str]
-ansible_user: ENC[AES256_GCM,data:mhwa3BMi,iv:H7uboG/I2dVv/AtOiVED/DQgr9zSB5Y5dEEi5bZgqAs=,tag:pH3JU8NkHawosdwCnPpSVA==,type:str]
+kind: ENC[AES256_GCM,data:u1m7+4W4,iv:sS61G6HtJPGzfysBZvoS7xGFGmnuEME3B2OJZdgrUzU=,tag:JylYFYJc3diRRfP9Ryq53Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:40HNxKc6,iv:UfiBOgZrAMnpLPctvVfrMzjvjWD+6eZfV45p8pUAIVw=,tag:8WRQd65fwsaTPxF4yewtuA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHTmMyR0V0WGhDZU0rNkdl
-            Nk9odFZoSkVMSFZkdnZBd3FsaUc3eUpyRFRvClZwa1VRVUhiY2xTOGp0QkhScjFU
-            bmVId1ZxTTg1UUxtcmN6SEUybCswWkEKLS0tIDRjWHE2MExLYllydTl2SkJLd1d6
-            WGFiNm9YTUppcnV3VUJUTDhNVVk4N1kK5Xxn76Q+G+cscUphAGBWQs6rQwqLMVno
-            eb65wchtM0Z1qBY316lzTq4Vu+RTnQTBGVJNKHcQq9MnYDii/wLE6Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIOU5lZy9tWWtVb1Vtb3hR
+            WjNNYS9BcUMvbHpsZWM5WWdNR1MrdVc1VXhRCjhINGJJZVB3eXpjdXpxclJKUEFa
+            Vzd4dnhZRDl1SGk0Z21UU0ljQnhyT2sKLS0tIGxJdFMxbHAzVkgybUozWFVyamN6
+            NW45NmVpUmUyWm5UTzhjTDFIS3FNNHcKDaRVqvsBZU5h5M4dk0vSFjW/iHlp/hAI
+            1FxSNG87a8pP0BppliKVRR1Jr0ztLnI40ddBlVsgh9sD3RAh7UXpxw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T05:00:03Z"
-    mac: ENC[AES256_GCM,data:Eqc9ZIJ7EN5b3VNkaq57pyodrsgz8UpmUq7xFyXVn2ZsamhrxRu357O3HHgndLVQ1VWv2V7pafx0yV0k2AKAuAN1t21VsLNBM7YKDKv1QGwJsZiK+AyReY4AQ0gmLXi0Nx71937KJ90jruBXtv5aBd31MTF69BRGEPlAwSymQtw=,iv:J72SaL3STB2+Fh/aT2tmZwR4LMf80iCyo1iyH9Hepi8=,tag:cgltnTAHBVxr0dxIaroOjw==,type:str]
+    lastmodified: "2022-12-25T18:09:37Z"
+    mac: ENC[AES256_GCM,data:MNKpgIsa0Wv+mPfaq8hagWh66nYVSUZX9/WQn/lms35iQZeCD/dp3TzL4oFpdl+ox4XqcMZLeIHQYoA30HkW/+pJVByy+89J38UQq930HO7cv+H9i5ukEmCN8vYMSh2RGbjUB1/YBVaNQBow/SVws5/SKZIopA21f2AQaLbTWno=,iv:iwvU8kvXbbMCkuS+U/F4Gkc/TPgr3xE+QXlQ24HJFQM=,tag:BbzwykgagQiqH2P5MXA9iA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
