--- a/ansible/inventory/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:OaPHvjMI,iv:q7ighftyPiw05Rb0ve9z5spUMvlg5ZBhq97nsDbh2v4=,tag:3Kwre+cd4Omf4tdVg33AGA==,type:str]
-ansible_user: ENC[AES256_GCM,data:ufaGLxgx,iv:qjg5n+vERKXkeGWUzaHpgDBrFWPxAwfQKMh/bWL0yY8=,tag:paiqdahYqfn2pzEKnhxHgw==,type:str]
+kind: ENC[AES256_GCM,data:mNOHOYbx,iv:pOJjvkRrnvALcI9endZu7WqbhcLgV8qhzLUAYipbeKs=,tag:ucPgDT/xljjfTOquTP8jNg==,type:str]
+ansible_user: ENC[AES256_GCM,data:d0t7Jbg/,iv:oWAWKk1SwDTMMJW+AbEDQFWg0u290+pE2WDhZ+aj7vo=,tag:XQBRduq8OQVifKKNt2p3EQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLam9qNTNEWlI5Q2o3azhV
-            RmdsWlJ2NnhzdFlwalRFZERDeEtKbzYzYWljCjFLR1g4UzNtQnlhSUxPamdpSjd5
-            T0ZWUXE5Yk8rV3dnMXc2TUxKOHQ2VVEKLS0tIHRxelIvZ2thV3lCR1dacUNTdjBu
-            ZU9mQXE3MWFFWHlDWnE2eFVhcUxqNUEKF2bj00ttDXtO7/+W6iJMD+QLKlVZ77/M
-            QliFw3cUdpq0MLmzhZ8rfQMoeoPTXoCh4t36yZHDCmXO3pv3zs8mqQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnTndtZVRYdGRreWNOUXNx
+            VkRtdmwwYkUxN3R2TFg5ZzZMQjZLU0phOVUwCmdkWkYrZFRvRnY4WkJIU0g0c1lI
+            byt1YTJpakhxOXg4RHpxdjJib0tsQUUKLS0tIFpVYkNJclhaWEJWRUptSzBuZCs4
+            SDh5b2JKMkUyTytyZ2wzVGQ3cXR1SnMKFVMOBW2ntenf4KFc8kRQJUubic4SSk36
+            hbf/iMflMxzC7uRnGBUMlzaAIcIORciUQmZvLJjuagC9lzLLE+nD0Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T05:00:03Z"
-    mac: ENC[AES256_GCM,data:gJXnj8A0MLxQQKiYIic9wS/5E8b7tYRB71wXfvcmAs/KAIiI9F/EfRNhH6SgmImOQeoQMVtji7DKqAYOiICtQjswKThsIibsAU2tm4BySq2On4qWh6KATcoFpW+oBwV9QfIaVCmLmC/+dZpdUuu9e8T19bhIOEW/f7z3Es7K7n8=,iv:+f2h+7Vu95dmzQsczn+uKM/pnsTunVmmvIC6pf4jE4I=,tag:nUi1uDxMuZMj3HKuc6RY8w==,type:str]
+    lastmodified: "2022-12-25T18:09:37Z"
+    mac: ENC[AES256_GCM,data:MFWfue0dqAXNsYIj0tiRq0e8tyG24SS0QH4yDNbrS31rpfIOUqXD53Q7AuATBWfJAphkqfF6PGR0sx+sXv4HZUJdylkQ433J7xhSUiY/v4ILO13tL05mN0s+ODrFtNdyyzU8utb1DMIPfE0tUBp1LbxgWkc+Y0WocQj6K8iHADk=,iv:ur6NlseHy8ggcMYYyc0yVd6nbxlUKhA9vxN6hGQcCv0=,tag:t8Q3HVi3MkRw9htsMvq19g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
