--- a/ansible/inventory/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ZDghHy//,iv:hyxxd58Fyr+BkaTUxYJK1bbwMuFIcL6svSzUg8m9pwE=,tag:LaEMycNj1MoMhwabUa7iyA==,type:str]
-ansible_user: ENC[AES256_GCM,data:zstGeekr,iv:kInBnDhr9otY+qfD8EBJMYn7SWVrjA1y+C+3W06/Kho=,tag:6PbLzy40RgZ5UpwkDWLWQQ==,type:str]
+kind: ENC[AES256_GCM,data:rlMSwzzG,iv:kf9QjW6QbIbABGt5l854lVw3/94olB5L5WxnXhtGmjU=,tag:ApqvX/dQsgLmJgNlYdJbMg==,type:str]
+ansible_user: ENC[AES256_GCM,data:N6GD/Tc8,iv:LZtl2Z4saQs+YB9aRuAIgYyKkH7FjsnWcLI54jeEMxM=,tag:5r3mmglLHSu0OkETLQU3pw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtNGppNHpWdTF0YkN4NGRk
-            NG9sMStoa2Z4SUd2emJwQk1JV0d2c3VvUmhRCm9JUGNxZjRPVy9GUWp0NHV0d0VO
-            VUVmUkJrdkhmS1puK3NUOWtLUlZONm8KLS0tIGRjLytNdWdWaXhqZG9odi9GUkFC
-            UkNJNlR5YU9kUTNwQ1Nic1dmQjRUK28K5GK2Cpx1/+fZ5WnRMOnHh7ZyEPArAoXU
-            p0scf1WtUhpOhuTdjOTDaM4bmAfHrlw+WDEXpqEFl4tMRhbvIXIfRQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzcWpYM2Q4d1cxL1ZtakZj
+            NHU4MFZnNjF4YmNBdnBNV3d0eVZTdytrSno0CjJnaXVkaXhIdGp4NUx0Y2xkemVF
+            dVdxRWluaFlXVXJLd3JQOTF0Snoybm8KLS0tIGFkOGtaVDNWQkNyV1ZJOVYxeVVS
+            dG0vdmUrM09yazZhMHdReTZwYUt3NlEKdMnXsxzXfXqJqJyqV+nR8/UfACI02maT
+            ZrSHD7QO+EvtF2EVTL89NU9yhjBCl7yWr+O/iHZEGYd5YxdODcmidQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T05:00:03Z"
-    mac: ENC[AES256_GCM,data:IwKzosDBq4u4eKDYDd18k2FV1Sp6MdFc31/isyBOIkTDnHOLA0YBRLALgaPBfbzsZxDtCAeypM5J4I8+MbJpinZOlbGidj96UhSb7GgO83DILNUdojFQ504tAUk0nT/7rGa3Vc4T//zsfqKUCBYRGj0cvBxMdOoSOd+J8keg3y0=,iv:Tpdpj2EgiJP4apEXH17dVnSS5lzWCs6dYPKjV7pdag0=,tag:/xLrKWzzrcG/BEl0KcrdPg==,type:str]
+    lastmodified: "2022-12-25T18:09:37Z"
+    mac: ENC[AES256_GCM,data:wrqI2Qadv4dbKTQpctLP3M8bjn8NxZD5InaKPHQsVioPAuarVHy4EpeGKxJW303FuZ9YGR2Cvu6YSLNCN5m/shRxMsiVuXs0SPpbL1YGL5mxdfgVvRlFiJ4XrqCyANaaCH5AMDgk+THpi+TWksalRK/ARNtdJKYLVJ9GB4fFWuk=,iv:iX7fkdc4Kc9TV335d0t2vTSy6+BkFvsdvACfVvWVhm8=,tag:iDh4e8Pax3pfr0iNvymWUA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
