--- a/ansible/inventory/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:EQECPiWq,iv:juNcWolLmSTbQ35Hhx/z0xF5voSfFPqfECMxiOFhrqk=,tag:YQTaC8bmwsMQ2qKpL/kb7g==,type:str]
-ansible_user: ENC[AES256_GCM,data:lOGeqs7A,iv:XFZh5LVO9QCFRROphHMZPLGi+Ni/k6FUq8LLPpKKacE=,tag:6VepRDZOus8tPc1RXqMj7g==,type:str]
+kind: ENC[AES256_GCM,data:PTANWHSl,iv:0AWajjGFN2KuV4NvIr5ppvgnvDasTp3inMZmKTUBiKQ=,tag:4HheIGLOV3PoPG+rMRTBHA==,type:str]
+ansible_user: ENC[AES256_GCM,data:1CFdrsha,iv:XkJvxlFyVeElrpVOgn3G8FY0OBW0VWUcUb8285T1SIk=,tag:B+yXm60spQEFkPTjNaN+lQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFQkdBZWNoZ3ZiNXhrdVo0
-            b3Ywb2RxWnp6M3llWlhWVGQwaXJrR0ZpQ3hZCmZTcmp6dkhnMlA3UlhqaExIVlZ5
-            S2E3NHB1cGhNZXZLdW5DZkExQldMSUkKLS0tIDJVcnFqeVRwTVBzVFFucFlvRmM4
-            em1kSDhZai8xUW1Xa1U1VFJtUnpnNWsKGM4Oia/HKSM/KUJ70ebt17mxuP+e8lTB
-            gi5AlFtrBuoHiez6mO7QKnzbirMjmlUXRipy67xP0FIAe8wnTvb1XQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqaGpac2lndG1zVlpUZUNU
+            REhvUFhsV1VOc1VVaG9lVktVenNWeHBUb25VCjJobWlvY29qbHBraFVoZjI5Nkth
+            aDVocWJrSktpbXFZb3l2RGhyWm9ickUKLS0tIEQwcmVnTTY5d0ZJRU1yQW9IeXJM
+            U0JrekVXelNwQ0hQeDJJRU5aS01wdEUKa+zzA7yUUjm5BvSulF264MRfDlSJI+Ee
+            6hyBG7RAi5hrppWduv+g1iUv/I6s4eK0LhcLsMB8izviug7L4UryNQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T05:00:03Z"
-    mac: ENC[AES256_GCM,data:x8kakzhY7GKlw9RXe2cApzn8yMACUuPe6uCXC5JAlMgrhckK6uuE2Hhwg5VvYVyBkdW+Cl9nkJrtFh26wUngbdq6o3N5v5CmyEmwhletiLAO8putbOb/yNSiTuX6eXYEZrwmmfRhSWV4UDUfL16fy5Mu7y8Z4Bq8ZSqGqwN0zks=,iv:dv0dgOPGSYbRyO+zAMhvyxmVndIXehOCiu7CQ8xCpvA=,tag:Psyy9/8CgY16Toge9szo8g==,type:str]
+    lastmodified: "2022-12-25T18:09:37Z"
+    mac: ENC[AES256_GCM,data:Jp/yJx7pMEsulfCp8CAS4R7M573ChZubmD7RgK9JHNFLZHMm9Dan7B6nOxvYztvnoxCNcXM0X41GAB/XNavXZGOoCKvVi7CHe/MSOO10gmcqVNSOohXWrL6HIv6z5D7+qjwkC2PWy6BS80sK9UF0ln4fr4AmOO841e2RAnEWgHw=,iv:+uqFGEtIe0XfpDFQYCL7xnDjNqivizNgKUUz0P6CxAs=,tag:4Yh02HMkG00vq/gF82JlSQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
