--- a/ansible/inventory/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:e7BcTfDz,iv:WPotl5fR8Hgm13ce9Ygobp9ih0jfNnGSbaYMvRdsCkc=,tag:apve5qug/SVSkJv8rtScOg==,type:str]
-ansible_user: ENC[AES256_GCM,data:oF7Krb0d,iv:Rq6eQycKhMlraScetVpzpvztgyxsauGmLmgMQgTXuMk=,tag:q+hJgYubMN/rkTw2MbltJQ==,type:str]
+kind: ENC[AES256_GCM,data:VyZwrvbU,iv:nvLzF2m8v2C62C3wBJe1Qei/MHalfJHG6b29YdoF/78=,tag:77Co8R2rVyL7HLYBlTdKJg==,type:str]
+ansible_user: ENC[AES256_GCM,data:ov/RaK8m,iv:73vBxYxPt+dvMOD5JZ0L/wlW8nnUbXrBCxtRlSVbpu4=,tag:AVDU8vZkjrH2XPkbse6RkA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1dy9jVUFaeldJbHE4dWlo
-            b0dPT1A3UldHRmZ5V0QzUU0wd3VTZnEybWlnCm54K3R4b2w1WlhZT0psUElRMVR3
-            SjdOY3cyZWZKQ3hkOFR6Y0haSEdISlkKLS0tIGYrZDZLRjZUVzJ6Lzd5VWJmMkd5
-            S0tuQnpTdXJQSmRDejBCU1Z3NlY2cVEKV+P9IMfZuAOri+araGoxm3lqZ3/gtNt7
-            MIiXiar9Jo9s5ZeD2iQXsUufu8+xCXa5DVyNU10hiIk6Z8AceHfHFA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4Njh1UTAvaHJ2ZnBreDV3
+            WWRML2ExYXRqSXA1cFhlVkdHaE9zcnlqclhRCnJZUytncHNYRlhaVHJXTXF3TnVN
+            cEVoVXNtVjlVWDVWRG9ybWtkN3ZlWXMKLS0tIG5rZExySHlEVHZwVXFOY2N6Z2dq
+            K2piMUxSL1Z0OEcxcG1CaDd4VURWVWcKI8JutV/eEAkrWZIRHBq0mSa4MIw2tcu9
+            7io0yj5mJD8ANlYwxdb4NNqPQ3nfH5RiTet0weI8k/xJ+q/j7UhI3Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T05:00:03Z"
-    mac: ENC[AES256_GCM,data:z41SekVgeaSZ4L2+J5Izfbkurc7Q8v7l856tNIESgSRNZylU7i6igdAvCH1vY74auBa7fP7u0NNE4LlXeRCXrWc3ZxCIWsctdF9teEzkppeiwLGIHlnALCYnsTYkkJIGnhiAmtqm1j+CSakaerSTpYodcqiDSJLzbs2g8ndc8B0=,iv:UTdirRrjEs3MHpGqkWltFeRrAyCdrrzKElZiwEcVyhU=,tag:y8zlg129vp/mlV7gU2pi0Q==,type:str]
+    lastmodified: "2022-12-25T18:09:37Z"
+    mac: ENC[AES256_GCM,data:X3Uif0SXe5JsIBjmAaxorX+Fn5YSlGepAumNiI6H81YEX/Na8h8FRnWxkxe1s0o4zUkCqT9B/kikO7c2jd76MOyKaIkSqUV2BlG1M86x/aqEH685u3cghJcpqNz+ZJprdtot8lVHopdWBz8OVp3slYnddignYBVv2ndxvgfItpk=,iv:fg6I+ZViP17R/pXfci2oVIP1IZaYev0Tk8CJJE5Thxg=,tag:gRXdqvEfLE1x2Ky+mO6zlg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
