--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:w540m6h9Xzx/4hId7zV2DCdKy+l9,iv:DWF9FUVCfpsv4BraQUmZpgN1dB9CmfdvyfcukN3xY/U=,tag:UJ8aJGYaR2lfYsEXvnk7IQ==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:/Xe/1nd7hNXjSiPMoszgrl6km3qByfOTCywIxRqk66DwRSp1BQ==,iv:TDg7cmdJF1CdDnV9zNAn3RdXYENkcP0r1t0wp5UDrwE=,tag:v6tKdGHfttaTO7dlDA8wPA==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:brdNJcAg5brUrGaqQZtuhg==,iv:gE10IC4PJjp6ET60F5DIPlwNQWPqGP36QqEPZ5GrqqY=,tag:/0PhkfQekocX1yvJgQRrpQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:kvXNCCsWSb8BxRyTAkmSTIvYICxR,iv:EsFTSky6bDpCyLP8KwOPzk7AZxCJb2Yeu5liCOeft6c=,tag:Fo7ekgHRPJSp8MDbV3QAag==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:6iH0H4OSXYLra9VPo2S5cBfl8ps8VgfOu/xx5yCDEFPsypSarw==,iv:afRxZYbE4DiBmO+nuDW9i0cLldRBtxZ+Iey952bB61A=,tag:HWIb+s6and9CQng5UbAUvQ==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:Srv/LQwxaOQMiRE=,iv:4NR21SWZcs4ZPs3hvrl84l8vzh1ZmF+U+dgPxNk/3cI=,tag:D3fxAFSfce3OWlFDJj/IOA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxOEZzZzlvVnZRV2hYaVhN
-            bjdjd2pJVlgwUzhabS9GY2ZxNUZuVVBuNUhnCmZKdmVjajJObFRiek1nbStwVjZK
-            VjF3U2ZMN2J6M0FIMWFMZzVtZU9KN0UKLS0tIFlRMWVoKzlTSTBuSWhDTFRBWExj
-            ZlRtbjBDKzFwSnVCaU5ranFRK1pWS2sKsyK2tULYBeriNagOYtMjbkpFIPJybCLL
-            BDNM4bAz2cJ7FuIDGUyx4tausyeBjZYjgNFL3cZleS7/m50MagGhQw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGOWIzcFptUVFlamF6WmNG
+            cmpYQzBDTFhjTEdLMGdnWVF5QnJ3cnlQOUhVCm5yNUY1M0lqblRkQzIzZjhhaGdJ
+            UUQvRVQ1Z3hKQW5yN0tTOXJaNzVyMlEKLS0tIHFKQzBoNlNHa1RHUzMxNGlhZlI1
+            ci9CMjhwem9peGVFR0QzT2ZoWTRHSHMKHUAmMCp8+khihq5WtJutdJz1wTnVjZnY
+            FjrwqVdJma34IWenBFjm1gg0rhQm2DnoshB5rXKLODp97ttY/E0dig==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T05:00:03Z"
-    mac: ENC[AES256_GCM,data:A6YUGd6O7Hvf9q7QmJoDv7g5GDgSb2zAUrUTbr0T1CjnWxBp/dO8evMkUVbpBwQsSjddb4tYyhf+iLW67e7sXT3bu+E/q4qBS2PPRO5HJ1BWEOW33o/lCB5DMV1RIcmR6PkatnB20Mwk2IU56OtpE9W2OLONjPWF1OUMvNZvyPY=,iv:lTn9/keLEEquwJYlXHOrOIyaR0rY+1jenJVWcevyzKc=,tag:1a4Gz0f+X9umm9VifiEyiw==,type:str]
+    lastmodified: "2022-12-25T18:09:37Z"
+    mac: ENC[AES256_GCM,data:eWSheYNTqcTHm9cH16o9NQ0BPMXaOzF73Ez3V7pDslymeI+KhByD2lnj8QuoqOhs7ue9pplNv1x8PgyoXfkZRLUNekLAshm3V60T7XTYLGt9PLLEm0LNVpzjZhGhtkU3Lw9HRWrTjFvghqgs9Ngf2kjCXRs08TlGfRA/wY+VXL8=,iv:/cTDNKBrD22ofEXD/Owi6FLPcd+tH3CcEtoQyS3EoSM=,tag:CreZAlfgyPxKoo4O4uB2vQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
