--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:YGgFzgyouPSSq1k=,iv:wbPoOH+HTfXrf1cfBhwerlSrO5nU4xtJg0+qx/z5DIM=,tag:4DMU5QV7QpPgFwcIzo3Zbw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:ddVcpZJBjKOC6/w+ed4ZnSeURQf0,iv:ORNUdKcAmUAe7i7IFeYCnTl5QVAg356nQvP35X7MZU8=,tag:NIMhjUS8BDjclEgwgZ8KBA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:tSEs+hCNIDNJ33c=,iv:SJiT82lfkr/AL+SP7V5UdhNmoWKHIwL15iDcEsnd4ko=,tag:j7KzDHGZqOW6JYQ+YCvLxQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:eIZTHKMkgCMJHdvvUBC5oSBX2j/x,iv:dEsBK34RDIdz5Po9wx7FXedd5l2gLAAw8DE0sMs3Dv4=,tag:GBXOm2TlyP/f7nf4l2j/Tg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjcXZ2UWRzRHU3a1MwMnNm
-            VWtjRTNSSmJjM3BpV3VrOUNkcVUwQjJ0bW1vCnVOc1FJSnlURzg3czJpMzdZcVEr
-            N3NHdnhvbFkvK0NORzVmcU82TWVOZ1kKLS0tICtTRGhxb1YwazV4T0ZpVVJzQzFL
-            bTZCQ2tVRi9ERHJyL3BVenhyYjVXSlEKSmyvEitUanXZ7A9++wFjL6dC6C1Dsu3n
-            gi5vSaqNEoXYc5hBhqEyxl7FfBN0G+Uo6WqccuBOOG/tSlfPN9npdg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpbXMvdXE5Ukx6UFRHZmY2
+            WlN2b2ZETW1FWWowUXpxdDFyU0F1QWtPZnhjCjR5blBOZ01YNFZuKzIwMHVaWTlq
+            S2F4c1U4V2Zhd0hXdklzNnhzb3ZxY0UKLS0tIEQrenRCVEJEVXA0ZWd5Q3o5OURL
+            Z2VEZjFGWHVVdHJZMXI4eWU4Z2ltTUUKYtGkwb7CgGfheA8QkzYFvC4WlEy3pFu+
+            oELWWF+JYA4EtABGaWb1dv+3d7WPLmRXQJHQD9J30CjxlNv9lu+S5Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T05:00:03Z"
-    mac: ENC[AES256_GCM,data:Drcf6F8hUizqLrSzw4di9EjIwDvsXCMz94Fw+RZ1Lqr0d5pkLS9jof0HyEw+CYRLYLZwi7iWgE5aFf52wGOIf9/wTeJIXXJ4TvArsUV0S66QYuBHhO+jX7SF4xT9ay1Xy9scBRRxJ/Bx0tYuI3O6m/NUQleYtqQyiWyuZrett1I=,iv:Z05Bkyu8k1l6qOiBN2/wH3lf0wIlVvjE7XBVcg71e2A=,tag:hruNIklcE4qaYzAW40uM3A==,type:str]
+    lastmodified: "2022-12-25T18:09:37Z"
+    mac: ENC[AES256_GCM,data:T0yVFmURoy/k0J5JtUe1Ef/zCCU3159/pBeRkj/bGsSuSWO2XqUIgC9imX1JRwJTKFDwVzwTQgTQIEIm2NwMGm9GhvAhqEMmFtD8jleD9ugV+3uIIbf6sx9RR1FOz4frkx/NvpnjaM3shSF3GtmW1w97R+D+RfY7MkZ+5sOr0aU=,iv:m2+wY7jPL7lHAqcj73+4jOTPmc55jmoqHYgBmmZSRrM=,tag:4vEKPSu6SxWnehcVLzCxlA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
