--- a/ansible/inventory/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:u1m7+4W4,iv:sS61G6HtJPGzfysBZvoS7xGFGmnuEME3B2OJZdgrUzU=,tag:JylYFYJc3diRRfP9Ryq53Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:40HNxKc6,iv:UfiBOgZrAMnpLPctvVfrMzjvjWD+6eZfV45p8pUAIVw=,tag:8WRQd65fwsaTPxF4yewtuA==,type:str]
+kind: ENC[AES256_GCM,data:04Ne608z,iv:xYVYYxmszoTGwKmfDjfypPpq8asf+ngzwosBWojj5zQ=,tag:N1hmfqx+Al9XIMAK9o2vhg==,type:str]
+ansible_user: ENC[AES256_GCM,data:P6dlf56o,iv:Aa+6EnlFSu8at2v1pmQ3JKB8404KAVgxLlhNolZZjOk=,tag:Yaz7yKyDfoy0DLNkl/DgXQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIOU5lZy9tWWtVb1Vtb3hR
-            WjNNYS9BcUMvbHpsZWM5WWdNR1MrdVc1VXhRCjhINGJJZVB3eXpjdXpxclJKUEFa
-            Vzd4dnhZRDl1SGk0Z21UU0ljQnhyT2sKLS0tIGxJdFMxbHAzVkgybUozWFVyamN6
-            NW45NmVpUmUyWm5UTzhjTDFIS3FNNHcKDaRVqvsBZU5h5M4dk0vSFjW/iHlp/hAI
-            1FxSNG87a8pP0BppliKVRR1Jr0ztLnI40ddBlVsgh9sD3RAh7UXpxw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUMlhYTGFqMHRzWTRQTHRX
+            RzJLM2RMSnNQcnhtU0lnQU1vV0JwSXo4MjJFClQ4bzZPNko1dUxKb2lBdVIzYWhz
+            a0VVWVp6clN0aUF6eEVuMWErTWExNjgKLS0tIFk0RkNNNzRPeHlJbTNQK3JjNE1E
+            ZUlGdTFlRTZCN3MzdHFPd3lYeHE3NVEKhIQkKH93U0wnS0+z9c/IoppU6cueOx6D
+            5M5lclooIZUfO6a12Njhg4ekBSco7frGy49vWF7IJ7nBlAsY+xMKrA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T18:09:37Z"
-    mac: ENC[AES256_GCM,data:MNKpgIsa0Wv+mPfaq8hagWh66nYVSUZX9/WQn/lms35iQZeCD/dp3TzL4oFpdl+ox4XqcMZLeIHQYoA30HkW/+pJVByy+89J38UQq930HO7cv+H9i5ukEmCN8vYMSh2RGbjUB1/YBVaNQBow/SVws5/SKZIopA21f2AQaLbTWno=,iv:iwvU8kvXbbMCkuS+U/F4Gkc/TPgr3xE+QXlQ24HJFQM=,tag:BbzwykgagQiqH2P5MXA9iA==,type:str]
+    lastmodified: "2022-12-25T19:30:11Z"
+    mac: ENC[AES256_GCM,data:d63Tk66jBfQeQ3d9FDZ3LuraYdwyFM/H9qyK76+DvwjIjUmRLVSX9UVtUUnhtzbPxd+dh3dshJXX+PbP5UC4k3xK2LqiHig8QPpixYNKTk5h57t1B2NP6f1J/x3RaflJm7A2hWzb19Utl2DkqzevJGIqO3dvYKls6VwrjjfWcHs=,iv:z5wpdkYKPOxWaLqJQTau6UnEc9uynYCAIbm7sdSk2GQ=,tag:SXD0BcYT1V/8ZB72tu50Bg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
