--- a/ansible/inventory/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:mNOHOYbx,iv:pOJjvkRrnvALcI9endZu7WqbhcLgV8qhzLUAYipbeKs=,tag:ucPgDT/xljjfTOquTP8jNg==,type:str]
-ansible_user: ENC[AES256_GCM,data:d0t7Jbg/,iv:oWAWKk1SwDTMMJW+AbEDQFWg0u290+pE2WDhZ+aj7vo=,tag:XQBRduq8OQVifKKNt2p3EQ==,type:str]
+kind: ENC[AES256_GCM,data:6jslTHtj,iv:ISa/k1gUTQzQ68caJBPJtgQkopT5L4sGhUXicfGTHd4=,tag:nA5RUeVo0zUL/qCfYj2D8w==,type:str]
+ansible_user: ENC[AES256_GCM,data:z8lcO6Eb,iv:AqhJZ1EkPBEF36ZfQKoe0qjwh5FHSQsjOvGOM73pHzs=,tag:aY5aelXriO4ua7Nf02V2ag==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnTndtZVRYdGRreWNOUXNx
-            VkRtdmwwYkUxN3R2TFg5ZzZMQjZLU0phOVUwCmdkWkYrZFRvRnY4WkJIU0g0c1lI
-            byt1YTJpakhxOXg4RHpxdjJib0tsQUUKLS0tIFpVYkNJclhaWEJWRUptSzBuZCs4
-            SDh5b2JKMkUyTytyZ2wzVGQ3cXR1SnMKFVMOBW2ntenf4KFc8kRQJUubic4SSk36
-            hbf/iMflMxzC7uRnGBUMlzaAIcIORciUQmZvLJjuagC9lzLLE+nD0Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBRHBSRUJFaUxTbnR4a0li
+            bkQycklDazJkS2VEbXF2TEx5WkhGemNLTENjCnZjSTN1OTBJWjdreVk3WUlicVVs
+            Yk5aLzBEYjk2c0g0SUhhc3hBYjN1aDQKLS0tIFpTcjJNbzR2cG5jZWY5ekNsZmZQ
+            YXZqcmwrSkpJZzZ2RGV0cm95cEU1TGsKvw4xpReYzNzRlJZ2OT7Vfln1uI1Dbt9h
+            Rf+ib8XgOrynyhfw7XtGoRoe/xmX3yD5HjXawJA55fwYsH5Q1dES4g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T18:09:37Z"
-    mac: ENC[AES256_GCM,data:MFWfue0dqAXNsYIj0tiRq0e8tyG24SS0QH4yDNbrS31rpfIOUqXD53Q7AuATBWfJAphkqfF6PGR0sx+sXv4HZUJdylkQ433J7xhSUiY/v4ILO13tL05mN0s+ODrFtNdyyzU8utb1DMIPfE0tUBp1LbxgWkc+Y0WocQj6K8iHADk=,iv:ur6NlseHy8ggcMYYyc0yVd6nbxlUKhA9vxN6hGQcCv0=,tag:t8Q3HVi3MkRw9htsMvq19g==,type:str]
+    lastmodified: "2022-12-25T19:30:11Z"
+    mac: ENC[AES256_GCM,data:6/NVq4cnasyV/MkkmEydSJvTsD3jPY4+0PmiQdXuYecJfbKVs3ELrDI20n2aGlyszxCyQqBN3ktwY19WqK1DJUnfbFQNNRUh2ijIihvuMD+ucayYn53IQeS6yrkqbtu+7vxuHYbaN2jUOuDDTkd+0hrJOYzEm245WtR7XY6pMVM=,iv:NwdcXAA/lBZkfcjLb2BhKceWmipztp9K/F0/lwdCMg8=,tag:L9HLgFAOSnUQ2tb2GxUQBw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
