--- a/ansible/inventory/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:rlMSwzzG,iv:kf9QjW6QbIbABGt5l854lVw3/94olB5L5WxnXhtGmjU=,tag:ApqvX/dQsgLmJgNlYdJbMg==,type:str]
-ansible_user: ENC[AES256_GCM,data:N6GD/Tc8,iv:LZtl2Z4saQs+YB9aRuAIgYyKkH7FjsnWcLI54jeEMxM=,tag:5r3mmglLHSu0OkETLQU3pw==,type:str]
+kind: ENC[AES256_GCM,data:Asgr6Xpl,iv:fu+dZD5hFKUVauFAC/7B2D+P+OTnHvnVHcEwvjxm5f0=,tag:fKkMRj7/MXDke1hp3I5vSQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:/6HhjLZF,iv:JVMClHnNPNCuH9GcvtLOjrrjblfjs87KoeP1riAz7jY=,tag:r82E6L4iJ6IM8MMjf/wR1w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzcWpYM2Q4d1cxL1ZtakZj
-            NHU4MFZnNjF4YmNBdnBNV3d0eVZTdytrSno0CjJnaXVkaXhIdGp4NUx0Y2xkemVF
-            dVdxRWluaFlXVXJLd3JQOTF0Snoybm8KLS0tIGFkOGtaVDNWQkNyV1ZJOVYxeVVS
-            dG0vdmUrM09yazZhMHdReTZwYUt3NlEKdMnXsxzXfXqJqJyqV+nR8/UfACI02maT
-            ZrSHD7QO+EvtF2EVTL89NU9yhjBCl7yWr+O/iHZEGYd5YxdODcmidQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOQWRvd3VZem1ZRG4yakhH
+            cGgwOWZwWGhBczhSMTI5VGRDTUo5Y2dHcWprCkNITFZIRTAyZlBpdHc0VUxvUlNT
+            NEpuOElpUWo3MEJOZVZReExMeENkMlkKLS0tIDVta3Zia2dFMlh1MmFNazFEVHN1
+            NDVDbW5LRVZZY05oQWllWnpFdCtKRDgKvYZWNL7p188BBYH8UtpvJhl8JaTqeX/Y
+            oGY7W2okKWGfsD2/R+3PJzPOdXINAfIGmGcNd6IC0kjlW3RsVT5ElQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T18:09:37Z"
-    mac: ENC[AES256_GCM,data:wrqI2Qadv4dbKTQpctLP3M8bjn8NxZD5InaKPHQsVioPAuarVHy4EpeGKxJW303FuZ9YGR2Cvu6YSLNCN5m/shRxMsiVuXs0SPpbL1YGL5mxdfgVvRlFiJ4XrqCyANaaCH5AMDgk+THpi+TWksalRK/ARNtdJKYLVJ9GB4fFWuk=,iv:iX7fkdc4Kc9TV335d0t2vTSy6+BkFvsdvACfVvWVhm8=,tag:iDh4e8Pax3pfr0iNvymWUA==,type:str]
+    lastmodified: "2022-12-25T19:30:11Z"
+    mac: ENC[AES256_GCM,data:lZM2RD0jCMJtxwQrLQ72uDETSg5FqY6ZxFCuGc9GXVHxmMKU4HlEqJmNYS0QftYt/N8EDtF2bddyC03+KRTrt0+V0jgKTho+dbU7HaApNI6pHt5f4KVZaoT4UJ1vt/3jYdBaOjw+8Ylwm33Q+iIziE0DhVj90hFk62IDQ99hEes=,iv:V1EwjsF4/phZiEKrf/bimvj1P+KZCQcwl3wn9cOGRl0=,tag:61sLdT/Ifj0RFMGwNWcNdQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
