--- a/ansible/inventory/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:VyZwrvbU,iv:nvLzF2m8v2C62C3wBJe1Qei/MHalfJHG6b29YdoF/78=,tag:77Co8R2rVyL7HLYBlTdKJg==,type:str]
-ansible_user: ENC[AES256_GCM,data:ov/RaK8m,iv:73vBxYxPt+dvMOD5JZ0L/wlW8nnUbXrBCxtRlSVbpu4=,tag:AVDU8vZkjrH2XPkbse6RkA==,type:str]
+kind: ENC[AES256_GCM,data:QvVXlsJe,iv:66kOrkEp/HVFYcFkKMlEym+6xg6regbczMMogmjF69o=,tag:OOOOg+UaLyjkCwHRzFjnqA==,type:str]
+ansible_user: ENC[AES256_GCM,data:8FoL3n/s,iv:dGeSXhm0XG0ysZg28kpGvt+vHgcob2z/s32RuyjKT/8=,tag:CmNWh3zfLB5vVFenHsWDdA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4Njh1UTAvaHJ2ZnBreDV3
-            WWRML2ExYXRqSXA1cFhlVkdHaE9zcnlqclhRCnJZUytncHNYRlhaVHJXTXF3TnVN
-            cEVoVXNtVjlVWDVWRG9ybWtkN3ZlWXMKLS0tIG5rZExySHlEVHZwVXFOY2N6Z2dq
-            K2piMUxSL1Z0OEcxcG1CaDd4VURWVWcKI8JutV/eEAkrWZIRHBq0mSa4MIw2tcu9
-            7io0yj5mJD8ANlYwxdb4NNqPQ3nfH5RiTet0weI8k/xJ+q/j7UhI3Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2SVFFWTNPYVd1OXBhQXU5
+            dHN5NWtFMWQ0WDJha2Z2WVAxWGxkVThmVTNzCisvVDNoTEs3QjBNM0NUc09sdTJa
+            anBCMUljeGNZOGhhbDk3eCsvYVNMS2sKLS0tIHFVT3lPT2MvY3pMREJKRml5OTR6
+            WlhHWDFNdzNFMlR2RjA2NFFwbDdOUGsKVwSrvL/FH6t6MOC7I7jJiGn/ZpVJiaWm
+            yj2fzWHAhFN97dfctTdteVMGddcJivfolUM5SEg0o+vypDAsSfvwTQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T18:09:37Z"
-    mac: ENC[AES256_GCM,data:X3Uif0SXe5JsIBjmAaxorX+Fn5YSlGepAumNiI6H81YEX/Na8h8FRnWxkxe1s0o4zUkCqT9B/kikO7c2jd76MOyKaIkSqUV2BlG1M86x/aqEH685u3cghJcpqNz+ZJprdtot8lVHopdWBz8OVp3slYnddignYBVv2ndxvgfItpk=,iv:fg6I+ZViP17R/pXfci2oVIP1IZaYev0Tk8CJJE5Thxg=,tag:gRXdqvEfLE1x2Ky+mO6zlg==,type:str]
+    lastmodified: "2022-12-25T19:30:11Z"
+    mac: ENC[AES256_GCM,data:Q3ECe0/0zUkZ0HwL/mtd13LVD2vxGeAR2jZFib2m/B73c+obU7DYWjcgI34Dl1Gr9am7aGpv7QEU51Hxoyf2pCUCB0vQoOfYUyw5ik/rd+qF1UabP5CAnUPMldA1zufxaIY/f8xY9svc5LaKtTIhP3YzDfPuCej1dsNB9WVebus=,iv:qRwIccWSNr+/zrlP7LoZDdNaKiPH0/Ko6thjXcDE6tI=,tag:9FYKi9tUd2TMuuqqN+qGwg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
