--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:tSEs+hCNIDNJ33c=,iv:SJiT82lfkr/AL+SP7V5UdhNmoWKHIwL15iDcEsnd4ko=,tag:j7KzDHGZqOW6JYQ+YCvLxQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:eIZTHKMkgCMJHdvvUBC5oSBX2j/x,iv:dEsBK34RDIdz5Po9wx7FXedd5l2gLAAw8DE0sMs3Dv4=,tag:GBXOm2TlyP/f7nf4l2j/Tg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:KKMEstLDhhlNV9s=,iv:hqI7QyDVvP3AP+8Yup59Ljp8oEZ9nngPOO7yZbuiRWU=,tag:okPTCZM9d/HEL1YvyDzw3Q==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:A4rO4ktzF7oD8mDy+NHlEK1RWWII,iv:7H0z3YHOZw5RuhmUeu4yXPvy2fHUXfffKfuqC5yWvW8=,tag:WRZMglpgrMOBt/r9jVQ0Hg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpbXMvdXE5Ukx6UFRHZmY2
-            WlN2b2ZETW1FWWowUXpxdDFyU0F1QWtPZnhjCjR5blBOZ01YNFZuKzIwMHVaWTlq
-            S2F4c1U4V2Zhd0hXdklzNnhzb3ZxY0UKLS0tIEQrenRCVEJEVXA0ZWd5Q3o5OURL
-            Z2VEZjFGWHVVdHJZMXI4eWU4Z2ltTUUKYtGkwb7CgGfheA8QkzYFvC4WlEy3pFu+
-            oELWWF+JYA4EtABGaWb1dv+3d7WPLmRXQJHQD9J30CjxlNv9lu+S5Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqSm5hRXY2aHI2NnA0Q0pR
+            VUdyVDBld2grck5sSHE0YUxxVDJCQXpGblZ3Cnh0YVdsYlVCZUNmSnVrZjlTanNW
+            S2pLM3E4TnUwUUtqY1krdEZ2S2h6K3cKLS0tIGYwaUZyY05MYUFDUlJBcnp2NHl1
+            azlPK2Y2aE9OdXdpQnd3RFlFNzRpbzQKYGKF6qLt6MF9TWXJtSSikjLIjq0oUQaT
+            7aCiiHebo6/ko4n4Z5V68SBtllmH3/PW5nf9HzxaTaTXDOPs4SpdHw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T18:09:37Z"
-    mac: ENC[AES256_GCM,data:T0yVFmURoy/k0J5JtUe1Ef/zCCU3159/pBeRkj/bGsSuSWO2XqUIgC9imX1JRwJTKFDwVzwTQgTQIEIm2NwMGm9GhvAhqEMmFtD8jleD9ugV+3uIIbf6sx9RR1FOz4frkx/NvpnjaM3shSF3GtmW1w97R+D+RfY7MkZ+5sOr0aU=,iv:m2+wY7jPL7lHAqcj73+4jOTPmc55jmoqHYgBmmZSRrM=,tag:4vEKPSu6SxWnehcVLzCxlA==,type:str]
+    lastmodified: "2022-12-25T19:30:11Z"
+    mac: ENC[AES256_GCM,data:JMqjSK/yZuWGCeukXoCHZhy2BqjNRbejEBedWpgWAbVRnXflOGO18OlbPeEWGvXs0WAJjrc7b4d2O5WsjVDC4v4B88l2nDMyorFHLisf1Mda+huIvFTpgUcoSuKhpwkwLL2bLnp4fGGtyt+Id8nSYfhr/9uZtGwbkew42B2z++c=,iv:ocFWGO5hbnmnrh80nGjHwC7K/ewEf448Qwmrmpufj8k=,tag:12qzKmyLwb18B5k0DI0dlg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
