--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -10,5 +10,5 @@ data:
   METALLB_LB_RANGE: "192.168.1.50-192.168.1.99"
   METALLB_K8S_GATEWAY_ADDR: "192.168.1.98"
   METALLB_INGRESS_ADDR: "192.168.1.99"
-  CONFIG_NFS_SERVER_IP_ADDRESS: 192.168.1.2
-  CONFIG_NFS_SERVER_PATH: /network-storage
+  CONFIG_NFS_SERVER_IP_ADDR: "192.168.1.2"
+  CONFIG_NFS_SERVER_PATH: "/network-storage"
