--- a/ansible/inventory/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:PTANWHSl,iv:0AWajjGFN2KuV4NvIr5ppvgnvDasTp3inMZmKTUBiKQ=,tag:4HheIGLOV3PoPG+rMRTBHA==,type:str]
-ansible_user: ENC[AES256_GCM,data:1CFdrsha,iv:XkJvxlFyVeElrpVOgn3G8FY0OBW0VWUcUb8285T1SIk=,tag:B+yXm60spQEFkPTjNaN+lQ==,type:str]
+kind: ENC[AES256_GCM,data:Su06mchM,iv:vkBGhCD5hEiyjLmpGbzImwgtDp8QT6IDUguVFZTXX8c=,tag:w0yfBybojuyeo2QXby0nBg==,type:str]
+ansible_user: ENC[AES256_GCM,data:wOhQZCoP,iv:6iWDKjxc0nM1HV2q/St+m8n0x9Xu68ccWS4PkDSH29Q=,tag:/WwML3/xzU2SAwNEoccOZg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqaGpac2lndG1zVlpUZUNU
-            REhvUFhsV1VOc1VVaG9lVktVenNWeHBUb25VCjJobWlvY29qbHBraFVoZjI5Nkth
-            aDVocWJrSktpbXFZb3l2RGhyWm9ickUKLS0tIEQwcmVnTTY5d0ZJRU1yQW9IeXJM
-            U0JrekVXelNwQ0hQeDJJRU5aS01wdEUKa+zzA7yUUjm5BvSulF264MRfDlSJI+Ee
-            6hyBG7RAi5hrppWduv+g1iUv/I6s4eK0LhcLsMB8izviug7L4UryNQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMYmIzaDFGenNncTFWTktP
+            V2MzWEJuWjhMQlZvOVpCZUJlSndQV093ODFBCjhCNG0wRndzNHZSTGNDMkhidFVv
+            SWNXWDFNZGNjbkd5eHdvbXVHZU8zcjQKLS0tIFQzbExoRjlzV1RVQkZucGd3bEFw
+            N3FzVnpkT0VUYWhab2llcnNzd3NZanMKRNuEP5vsNRZHrQF3l+m1LVXPZVlbGxLK
+            Fo3A/uJRpS+eobXdiPIWylOd+PTF6fHNP2oqxtUw+A5NjryCI32h0g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T18:09:37Z"
-    mac: ENC[AES256_GCM,data:Jp/yJx7pMEsulfCp8CAS4R7M573ChZubmD7RgK9JHNFLZHMm9Dan7B6nOxvYztvnoxCNcXM0X41GAB/XNavXZGOoCKvVi7CHe/MSOO10gmcqVNSOohXWrL6HIv6z5D7+qjwkC2PWy6BS80sK9UF0ln4fr4AmOO841e2RAnEWgHw=,iv:+uqFGEtIe0XfpDFQYCL7xnDjNqivizNgKUUz0P6CxAs=,tag:4Yh02HMkG00vq/gF82JlSQ==,type:str]
+    lastmodified: "2022-12-25T19:30:11Z"
+    mac: ENC[AES256_GCM,data:2pAmXJmiLKunbvtSMWeoILSzg4tej8fwWkdzm+4TkDWF9e4YnUqxby3t73dbIfu22DfRqC4FLSlO9ev6tBkXyg83ki1/Uk9l6Qx8G9alQVDpqLZnZl6d/vxdnXDH3NF2hY282K/hwEig5jcFwrUn8IO049OeYpsP9jisBTMTwmQ=,iv:AfodAgt2mcxMFY5EonLfYP07PoSN/+fJM3vBZF/4F+8=,tag:WnS0yx6znsW7Xt9gUpamlg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
