--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:kvXNCCsWSb8BxRyTAkmSTIvYICxR,iv:EsFTSky6bDpCyLP8KwOPzk7AZxCJb2Yeu5liCOeft6c=,tag:Fo7ekgHRPJSp8MDbV3QAag==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:6iH0H4OSXYLra9VPo2S5cBfl8ps8VgfOu/xx5yCDEFPsypSarw==,iv:afRxZYbE4DiBmO+nuDW9i0cLldRBtxZ+Iey952bB61A=,tag:HWIb+s6and9CQng5UbAUvQ==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:Srv/LQwxaOQMiRE=,iv:4NR21SWZcs4ZPs3hvrl84l8vzh1ZmF+U+dgPxNk/3cI=,tag:D3fxAFSfce3OWlFDJj/IOA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:2VLtDdE87SAjv9/VlHiRP+1XOyF3,iv:34Y+gJsrVXWphm6BTlwoknrApWsK4bXFoqXaFn9a0dI=,tag:Hqm0Fc9IzLr3EWMBrHJs7A==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:d/R3m+3g4U79OA3hSttvjtN5ZdF4fo+TF7Gq2a3P9meohqw1XA==,iv:n3/kg7njWKgHF/OALOm1PHryBb851ehGIT4RUBV5QWo=,tag:yLWV7/n41ssCTQkYgTWRHA==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:NvTb8O0iBahKPNQ=,iv:Xk/ifZ4/bayTfCMlMbzW988cw9SAxgLCyx0BduoFLMk=,tag:LreTlKDnUB4OqIqdm19U/g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGOWIzcFptUVFlamF6WmNG
-            cmpYQzBDTFhjTEdLMGdnWVF5QnJ3cnlQOUhVCm5yNUY1M0lqblRkQzIzZjhhaGdJ
-            UUQvRVQ1Z3hKQW5yN0tTOXJaNzVyMlEKLS0tIHFKQzBoNlNHa1RHUzMxNGlhZlI1
-            ci9CMjhwem9peGVFR0QzT2ZoWTRHSHMKHUAmMCp8+khihq5WtJutdJz1wTnVjZnY
-            FjrwqVdJma34IWenBFjm1gg0rhQm2DnoshB5rXKLODp97ttY/E0dig==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvOTF3ZzNTVGRZOTJSdXBD
+            U1gzb2hXUnBRWHBGa2J5NnhCRE5wQ05qaHdBCmVWNTJOS1R4L3BkbUJ1UGY0V3A1
+            aS9nZ1BZYnI3aEQ1WHZjS2dnUUlaaGsKLS0tIFZRRUlWWGtNaGlESU1rODJMRGhQ
+            WG9nVXpNVml3dmFnclE4MGVqeEZDWmsKYcdrsqMmHMu0fQgbvh77AFvsmvDknluj
+            0JfJTRWUPoNXP87Y5cWQMuNqjJz6iJAdHBOmtVkblCKYUAZ9WxP/Uw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T18:09:37Z"
-    mac: ENC[AES256_GCM,data:eWSheYNTqcTHm9cH16o9NQ0BPMXaOzF73Ez3V7pDslymeI+KhByD2lnj8QuoqOhs7ue9pplNv1x8PgyoXfkZRLUNekLAshm3V60T7XTYLGt9PLLEm0LNVpzjZhGhtkU3Lw9HRWrTjFvghqgs9Ngf2kjCXRs08TlGfRA/wY+VXL8=,iv:/cTDNKBrD22ofEXD/Owi6FLPcd+tH3CcEtoQyS3EoSM=,tag:CreZAlfgyPxKoo4O4uB2vQ==,type:str]
+    lastmodified: "2022-12-25T19:30:11Z"
+    mac: ENC[AES256_GCM,data:J6yqBfDYphq9uGphowa8MwN7SNt/ez60vdkYC3S5zoLWvo3AVyWCq5C6y70WjBy0/h5FlSyOziU+NBrdiAamSyVPX+ioTLwwd3/o0H+medllwmfDVFKWNePhEwrOR6Z29n+UtN0HehbhLyl6EABV9wdLeeTLIPdLibERmOiTJTk=,iv:/ryloJpsQWXFl3wqCmw9hsA0iLpjH4/4QO0M7ei3bFg=,tag:9Y+4riKsZNNpU1jSvE89hw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
