--- a/kubernetes/apps/nfs-system/kustomization.yaml
+++ b/kubernetes/apps/nfs-system/kustomization.yaml
@@ -1,5 +1,6 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - ./nfs-provisioner/ks.yaml
+  - ./namespace.yaml
+  - ./release.yaml
